# upgrade-python-package

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
upgrade/: __init__.py
upgrade/scripts/: exceptions.py  find_compatible_versions.py  logging_config.py  manage_venv.py  requirements.py  slack.py  upgrade_python_package.py  utils.py  validations.py
upgrade/tests/: conftest.py  generate.py  test_check_cloudsmith_url.py  test_check_constraints_file_path.py  test_check_install_with_constraints.py  test_check_is_package_already_installed.py  test_check_run_module.py  test_check_upgrade_from_local_wheel.py  test_integ_upgrade_from_local_wheel.py  test_upgrade_from_local_wheel.py  utils.py
upgrade/tests/data/dependency1/: MANIFEST.in  constraints.txt  setup.cfg  setup.py
upgrade/tests/data/dependency1/oll/dependency1/: __init__.py
upgrade/tests/data/dependency2/: MANIFEST.in  README.md  constraints.txt  setup.cfg  setup.py
upgrade/tests/data/test_constraints_flag/: constraints.txt  oll_dependency1-2.0.0-py2.py3-none-any.whl  oll_dependency1-2.0.2-py2.py3-none-any.whl  oll_dependency2-2.0.2-py2.py3-none-any.whl  oll_test_top_level-2.0.0-py2.py3-none-any.whl  oll_test_top_level-2.0.2-py2.py3-none-any.whl
upgrade/tests/data/top-level-project/: MANIFEST.in  README.md  constraints.txt  setup.cfg  setup.py
upgrade/tests/data/top-level-project/oll_test_top_level/: __main__.py
upgrade/tests/data/wheels_dir/: oll_dependency1-2.0.1-py2.py3-none-any.whl  oll_dependency2-2.0.1-py2.py3-none-any.whl  oll_test_top_level-2.1.0-py2.py3-none-any.whl
upgrade/tests/manage_venv/: conftest.py  test_build_and_upgrade_blue_green_deployment.py  test_build_and_upgrade_existing_venv.py  test_build_and_upgrade_new_venv.py  test_create_venv.py  test_get_compatible_upgrade_versions.py  test_utils.py
upgrade/tests/repository/: oll_dependency1-2.0.0-py2.py3-none-any.whl  oll_dependency1-2.0.1-py2.py3-none-any.whl  oll_dependency2-2.0.0-py2.py3-none-any.whl  oll_dependency2-2.0.1-py2.py3-none-any.whl  oll_test_top_level-2.0.0-py2.py3-none-any.whl  oll_test_top_level-2.0.1-py2.py3-none-any.whl  oll_test_top_level-2.0.2-py2.py3-none-any.whl
upgrade/tests/upgrade_package/: conftest.py  test_check_cloudsmith_url.py  test_check_constraints_file_path.py  test_check_install_with_constraints.py  test_check_is_package_already_installed.py  test_check_run_module.py  test_check_upgrade_from_local_wheel.py  test_filter_versions.py  test_integ_upgrade_from_local_wheel.py
