[metadata]
name = oll-dependency1
author = Open Law Library
version = file:VERSION
author_email = info@openlawlib.org
description = Test project 1
keywords = test
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Package Management
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
packages = oll
zip_safe = False
include_package_data = True
install_requires =
    Pillow==9.*
    contextvars==2.*
package_dir =
    oll = oll
test_suite = tests

[options.package_data]
    * = *.txt, *.rst
[options.extras_require]
dev =
    wheel
test =
    flake8
    pytest


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git/*,.eggs/*,
          build/*,venv/*
