[metadata]
name = oll-dependency2
version = file:VERSION
author = Open Law Library
author_email = info@openlawlib.org
description = Test project 2
keywords = test
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Package Management
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
packages = oll
zip_safe = False
include_package_data = True
package_dir =
    oll = oll
test_suite = tests

[options.extras_require]
dev =
    wheel
test =
    flake8
    pytest


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git/*,.eggs/*,
          build/*,venv/*
