[metadata]
name = oll-test-top-level
version = 0.1.0
author = Open Law Library
author_email = info@openlawlib.org
description = Top level test project
keywords = test
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Package Management
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
packages =
    oll
    oll_test_top_level
zip_safe = False
install_requires =
    defusedxml
    oll-dependency1==0.1.0
    oll-dependency2==0.1.0
include_package_data = True
package_dir =
    oll = oll
test_suite = tests


[options.extras_require]
dev =
    wheel
test =
    flake8
    pytest


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git/*,.eggs/*,
          build/*,venv/*
